--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,14 @@
       oklch(0.85 0.37 0) 0 0) border-box;
   border: 3px solid transparent;
 }
+
+.anim {
+  margin-right: 5vw;
+}
+
+/* small screen  */
+@media screen and (max-width: 768px) {
+  .anim {
+    margin-right: 10vw;
+  }
+}
