--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
   background:
       radial-gradient(circle,
         oklch(0.15 0.2 330 / 0),
@@ -60,9 +60,51 @@
   margin-right: 4vw;
 }
 
+.add-btn {
+  position: absolute;
+  right: 100px;
+  bottom: 100px;
+  animation: spin 2.5s infinite linear paused;
+  background:
+    linear-gradient(to bottom,
+      oklch(0.1 0.2 240 / 0.95),
+      oklch(0.1 0.2 240 / 0.95)) padding-box,
+    conic-gradient(from var(--bg-angle) in oklch longer hue,
+      oklch(0.85 0.37 0) 0 0) border-box;
+  border: 3px solid transparent;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 /* small screen  */
 @media screen and (max-width: 768px) {
   .anim {
     margin-right: 10vw;
+  }
+}
+
+
+@media screen and (max-width: 1000px) {
+  .add-btn {
+    position: sticky;
+    right: 10px;
+    bottom: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    z-index: 1;
+    animation: spin 2.5s infinite linear paused;
+    background:
+      linear-gradient(to bottom,
+        oklch(0.1 0.2 240 / 0.95),
+        oklch(0.1 0.2 240 / 0.95)) padding-box,
+      conic-gradient(from var(--bg-angle) in oklch longer hue,
+        oklch(0.85 0.37 0) 0 0) border-box;
+    border: 3px solid transparent;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
