--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
 }
 
 .card-box {
-  min-width: 250px;
+  min-width: 300px;
 }
 
 /* box border */
@@ -61,9 +61,8 @@
 }
 
 .add-btn {
-  position: absolute;
-  right: 100px;
-  bottom: 100px;
+  position: sticky;
+  bottom: 10px;
   animation: spin 2.5s infinite linear paused;
   background:
     linear-gradient(to bottom,
