--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@
 .add-btn {
   position: sticky;
   bottom: 10px;
+  margin-top: 10px;
   animation: spin 2.5s infinite linear paused;
   background:
     linear-gradient(to bottom,
